--- a/.github/workflows/deploy-dashboard.yml
+++ b/.github/workflows/deploy-dashboard.yml
@@ -9,6 +9,8 @@ on:
       - '**/*.md'
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron: '0 9 * * WED'
   workflow_dispatch:
 
 permissions: {}
