--- a/.github/workflows/deploy-dashboard.yml
+++ b/.github/workflows/deploy-dashboard.yml
@@ -23,5 +23,7 @@ jobs:
       id-token: write
       pages: write
     with:
+      configuration-url: ${{ format('https://raw.githubusercontent.com/{0}/benchmarks-dashboard/refs/heads/{1}/src/Dashboard/wwwroot/appsettings.json', github.repository_owner, 'main') }}
       deploy: ${{ github.event.repository.fork == false && github.ref_name == github.event.repository.default_branch }}
       environment: github-pages
+      ref: main
