--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,12 @@ on:
         description: 'Whether to deploy the dashboard after building it'
         required: false
         type: boolean
+        default: ${{ github.ref_name == github.event.repository.default_branch }}
       environment:
         description: 'The GitHub environment to deploy the dashboard to'
-        required: true
+        required: false
         type: string
+        default: 'github-pages'
       ref:
         description: 'The optional reference of the repository to build and deploy the dashboard from'
         required: false
